<resources>
    <string name="app_name">PasswordProject</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Login">Login</string>
    <string name="signup">Sign up</string>
    <string name="reset">Forgot password? Click Here</string>
    <string name="Name">Name</string>
    <string name="prenume">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="ins">Insert the address at which to receive the reset instructions</string>
    <string name="passList">View password list</string>
    <string name="ComingSoon">Coming Soon</string>
    <string name="about">About</string>
    <string name="my_sites">My Sites</string>
    <string name="site_name">Site Name</string>
    <string name="row_info">Row Info</string>
    <string name="add_password">Add Password</string>
    <string name="add_site">Add Site</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="my_accounts">My Accounts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_account">New Account</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
    <string name="comments">Additional Comments</string>
    <string name="rnd">rnd</string>
    <string name="generate">Generate</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_chars">Special Characters</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_length">Password Length</string>
    <string name="rememberMe">Remember me</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="upload_to_cloud">Upload To Cloud</string>
    <string name="sync_accounts">Syncronize Passwords</string>
    <string name="save">Save</string>
    <string name="edit_account_label">Edit Account</string>
    <string name="send_to_database">Send to Database</string>
    <string name="get_from_db">Import from Database</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="graph_title">Accounts Graph</string>
</resources>
